[gd_scene load_steps=7 format=2]

[ext_resource path="res://background.png" type="Texture" id=1]
[ext_resource path="res://UI/bannerHanging.png" type="Texture" id=2]
[ext_resource path="res://Font/DiaoYuShaoTi.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/button_rectangleWood.png" type="Texture" id=4]
[ext_resource path="res://Font/Start.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Start.gd" type="Script" id=6]

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="T_BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="T_Tile" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_top = 100.0
margin_right = 268.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 268, 0 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="T_Tile"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "测试"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.878
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -256.8
margin_right = 100.0
margin_bottom = -82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Start" type="TextureButton" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( 85, 0 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/btn_Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "开始"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="btn_Setting" type="TextureButton" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 164.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( 85, 0 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/btn_Setting"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "设置"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="btn_Exit" type="TextureButton" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 200.0
margin_bottom = 248.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( 85, 0 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/btn_Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "退出"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="VBoxContainer/btn_Start" to="." method="_on_btn_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_Setting" to="." method="_on_btn_Setting_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_Exit" to="." method="_on_btn_Exit_pressed"]
